# challenge-python-v1

./: .dockerignore  .env  .gitignore  Dockerfile  README .md  README.md  data.sql  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
dinopedia/: asgi.py  config.py  docker-compose.yml  manage.py  settings.py  urls.py  wsgi.py
dinopedia/dinopedia/: asgi.py  config.py  settings.py  urls.py  wsgi.py
dinopedia/dinopolls/: apps.py
dinopedia/dinosaur_service/: Dockerfile  install-poetry.py  main.py  pyproject.toml
dinopedia/dinosaur_service/app/: crud.py  logging_config.py  models.py  schemas.py
dinopedia/dinosaur_service/app/routers/: dinosaur.py
dinopedia/dinosaurs/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
dinopedia/dinosaurs/migrations/: 0001_initial.py  0002_period_period_unique_period_name_and_more.py  0003_dinosize_dinosize_unique_dino_size_and_more.py  0004_alter_dinosize_height_max_alter_dinosize_height_min_and_more.py  0005_eatingtype_eatingtype_unique_eating_type.py  0006_dinosaur_dinosaur_unique_dinosaur_name.py  0007_alter_dinosaur_name.py  0008_dinosaur_typical_colours.py  0009_alter_period_name.py  0010_alter_eatingtype_options_and_more.py  0011_alter_dinosize_height_max_alter_dinosize_height_min.py  0012_dinosize_lenght_max_positive_and_more.py  0013_delete_dinoowner.py  0014_petdinosaur_dinoowner_petdinosaur_unique_name_colour_and_more.py  0015_alter_dinoowner_petdino.py  0016_alter_dinoowner_liked_dinosaurs.py
dinopedia/image_service/: Dockerfile  main.py  pyproject.toml
dinopedia/image_service/app/: crud.py  database.py  dependencies.py  models.py  schemas.py
dinopedia/image_service/app/routers/: image.py
dinopedia/tests/: Dockerfile  conftest.py  requirements.txt
dinopedia/tests/test_dinosaur_service/: test_create_dinosaur.py  (+2 more)
dinopedia/user_service/: Dockerfile  main.py  pyproject.toml
dinopedia/user_service/app/routers/: user.py
dinosaurs/: admin.py  apps.py  models.py  urls.py  views.py
dinosaurs/templates/: base.html
dinosaurs_client/: patch_image.py
images_to_test/: deb-dowd-Ne_Q6RiX1IE-unsplash.jpg:Zone.Identifier  fausto-garcia-menendez-hYKG311mff8-unsplash.jpg:Zone.Identifier  jon-butterworth-_BJVJ4WcV1M-unsplash.jpg:Zone.Identifier  scott-greer-XfQ3t7AGTv0-unsplash.jpg:Zone.Identifier
tests/: test_models.py  test_views.py
(+15 files in other folders)
