
[tool.poetry]
name = "challenge-python-v1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "*"
pytest = "*"
psycopg2-binary = "^2.9.3"


[tool.poetry.dev-dependencies]
black = "^22.6.0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
