
[tool.poetry]
name = "challenge-python-v1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "*"
pytest = "*"
psycopg2-binary = "^2.9.3"
Pillow = "^9.2.0"
djangorestframework = "^3.13.1"
drf-yasg = "^1.21.3"
django-filter = "^22.1"
model-bakery = "^1.6.0"
pytest-django = "^4.5.2"
django-cors-headers = "^3.13.0"


[tool.poetry.dev-dependencies]
black = "^22.6.0"
django-extensions = "^3.2.0"
pydotplus = "^2.0.2"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
